--- a/crawling-incredible-offers/crawlProject/blog/templates/products/index.html
+++ b/crawling-incredible-offers/crawlProject/blog/templates/products/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Products List</title>
     <style>
         table, td {
           border: 1px solid rgb(194, 18, 194);
@@ -18,6 +18,7 @@
 </head>
 <body>
 
+    <h1 style="text-align:center; color: rgb(145, 8, 104)">لیست محصولات تخفیف دار</h1>
     <table style="width:100%">
         <tr>
             <th>میزان تخفیف</th>
